feat: implement currency validation and enhance exchange rate retrieval logic